--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,88 @@
-
-main{
-    width: 1600px;
+body{
+    background-image:url(../images/forest.webp);
+    background-size: cover;
+    background-
+}
+h1{
+    color: blueviolet;
+    text-align: center;
+}
+h2{
+    text-align: center;
+    color: grey;
+    font-style: italic
+}
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+button{
+    display: flex;
+    padding: 15;
+    border-radius: 20px;
+    background-color: blueviolet;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    box-shadow: 2px 2px 6px 6px red;
+}
+.conteiner{
+    width: 1000px;
     padding-left: 10px;
     padding-right: 10px;
     margin-left: auto;
     margin-right: auto;
+   
 }
-
-
-.navigation {
+.navigation{
     display: flex;
-    justify-content: center;
     column-gap: 20px;
-    margin-bottom: 30px;
+    justify-content: center;
 }
-.navigation-button {
-    padding: 15px;
-    border-radius: 20px;
-    background-color: blueviolet;
-    color: white;
-    text-transform: uppercase;
-    border: none;
-    box-shadow: 2px 2px 6px 4px red;
+.gallery{
+    flex-wrap: wrap;
+    display: flex;
+    column-gap: 15px;
+    row-gap: 25px;
+    margin-top: 50px;
 }
-.gallery {
+.gallery-text{
+margin-bottom: 10px;
+}
+.gallery-item{
 display: flex;
-flex-wrap: wrap; 
-column-gap: 15px;
-row-gap: 15px;
+ /* height: 100%; */
+    flex-basis: calc((100% - 15px) / 2);
+    box-shadow: 1px 1px 5px 1px  black;
+    border-radius: 5px;
+    background-color: blanchedalmond;
 }
-.gallery-item {
-    flex-basis: calc((100% - 13px)  / 2);
+.gallery-imge{
+    background-position: center;
+    width: 50%; 
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    overflow: hidden;
+}
+.imge1 {
+    background-image: linear-gradient(to top,rgba(255, 0, 0, 0.341),rgba(0, 128, 0, 0.44) ) ,url(../images/helth.jpg);
+}
+.imge2 {
+    background-image: linear-gradient(to top,rgba(255, 0, 0, 0.341),rgba(0, 128, 0, 0.44) ) ,url(../images/weight.png)
+}
+.imge3 {
+    background-image: linear-gradient(to top,rgba(255, 0, 0, 0.341),rgba(0, 128, 0, 0.44) ) ,url(../images/children.jpg)
+}
+.imge4 {
+    background-image: linear-gradient(to top,rgba(255, 0, 0, 0.341),rgba(0, 128, 0, 0.44) ) ,url(../images/eldery.jpg)
+}
+.gallery-contant{
+width: 50%;
+padding:15px  ;
+}
+.gallery-title{
+    text-transform: uppercase;
+    margin-bottom: 10px;
 }
